// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill Snapshots Pill animate snapshot 1`] = `
<DocumentFragment>
  .c0 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c0.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c0.variant--circle {
  width: calc(var(--bds-sizes-size-24) + var(--bds-sizes-size-2));
  height: calc(var(--bds-sizes-size-24) + var(--bds-sizes-size-2));
  border-radius: var(--bds-border-radius-circle);
}

.c0.variant--rect {
  width: calc(var(--bds-sizes-size-24) + var(--bds-sizes-size-2));
  height: calc(var(--bds-sizes-size-24) + var(--bds-sizes-size-2));
}

.c0.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c0.variant--rect.shape--squared {
  border-radius: 0;
}

.c0.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c0.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c0.variant--text.shape--squared {
  border-radius: 0;
}

<div
    class="c0 variant--circle shape--rounded pill--skeleton variant--pill style--animated"
    height="calc(var(--bds-sizes-size-24) + var(--bds-sizes-size-2))"
    width="calc(var(--bds-sizes-size-24) + var(--bds-sizes-size-2))"
  />
</DocumentFragment>
`;

exports[`Pill Snapshots Pill default snapshot 1`] = `
<DocumentFragment>
  .c0 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c0.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c0.variant--circle {
  width: calc(var(--bds-sizes-size-24) + var(--bds-sizes-size-2));
  height: calc(var(--bds-sizes-size-24) + var(--bds-sizes-size-2));
  border-radius: var(--bds-border-radius-circle);
}

.c0.variant--rect {
  width: calc(var(--bds-sizes-size-24) + var(--bds-sizes-size-2));
  height: calc(var(--bds-sizes-size-24) + var(--bds-sizes-size-2));
}

.c0.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c0.variant--rect.shape--squared {
  border-radius: 0;
}

.c0.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c0.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c0.variant--text.shape--squared {
  border-radius: 0;
}

<div
    class="c0 variant--circle shape--rounded pill--skeleton variant--pill style--default"
    height="calc(var(--bds-sizes-size-24) + var(--bds-sizes-size-2))"
    width="calc(var(--bds-sizes-size-24) + var(--bds-sizes-size-2))"
  />
</DocumentFragment>
`;

exports[`Pill Snapshots Pill indicator snapshot 1`] = `
<DocumentFragment>
  .c0 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c0.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c0.variant--circle {
  width: var(--bds-sizes-size-18);
  height: var(--bds-sizes-size-18);
  border-radius: var(--bds-border-radius-circle);
}

.c0.variant--rect {
  width: var(--bds-sizes-size-18);
  height: var(--bds-sizes-size-18);
}

.c0.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c0.variant--rect.shape--squared {
  border-radius: 0;
}

.c0.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c0.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c0.variant--text.shape--squared {
  border-radius: 0;
}

<div
    class="c0 variant--circle shape--rounded pill--skeleton variant--indicator style--default"
    height="var(--bds-sizes-size-18)"
    width="var(--bds-sizes-size-18)"
  />
</DocumentFragment>
`;
